@@ -7,6 +7,7 @@ Release 2.0.0 - ???
 
 
 Release 1.21 - ????
+   * Extract text from SDT element within textboxes in .docx files (TIKA-2807).
 
    * Try to handle truncated OOXML files more robustly (TIKA-2765).
 
